<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

    <groupId>${groupId}</groupId>
    <artifactId>${artifactId}</artifactId>
    <version>${version}</version>
    <packaging>pom</packaging>
    
    <name>${newProjectName}</name>
    <description>${newProjectName}</description>
	<url>Your project URL</url>
	<inceptionYear>2014</inceptionYear>

	<modules>
	    <module>${artifactId}-backend</module>
	    <module>${artifactId}-gwtfrontend</module>
	    <module>${artifactId}-gwtshared</module>
	</modules>

 	<properties>
        <appverse.framework.version>1.4-SNAPSHOT</appverse.framework.version>
		<appverse.ddl-generator.version>1.0.5.1</appverse.ddl-generator.version>
	</properties>
	
 	<build>
 		<defaultGoal>clean package tomcat7:deploy-only</defaultGoal>
 		
 		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.0</version>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
					<configuration>
						<includeEmptyDirs>true</includeEmptyDirs>					
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.13</version>
				</plugin>				

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.7</version>
				</plugin>
	
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.4</version>
				</plugin>		
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.7</version>
				</plugin>	
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.2.1</version>
				</plugin>		
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>2.9</version>
				</plugin>	
				
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-eclipse-plugin</artifactId>
					<version>2.9</version>				
				</plugin>							

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>2.6</version>				
				</plugin>	

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>gwt-maven-plugin</artifactId>
					<version>2.5.0</version>
					<configuration>
						<servicePattern>**/*ServiceFacade.java</servicePattern>
					</configuration>
				</plugin>				

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.7</version>				
					<executions>
						<execution>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>target/generated-sources/gwt</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>2.3</version>
					<configuration>
						<webXml>src/main/webapp/WEB-INF/web.xml</webXml>
						<archive>
							<addMavenDescriptor>false</addMavenDescriptor>
						</archive>
						<packagingExcludes>**/empty.tmp</packagingExcludes>
					</configuration>
				</plugin>

		        <plugin>
		          <groupId>org.apache.tomcat.maven</groupId>
		          <artifactId>tomcat7-maven-plugin</artifactId>
		          <version>2.1</version>
					<configuration>
					    <path>/${project.build.finalName}</path>
						<url>${tomcat.manager.url}</url>
						<update>true</update>
					</configuration>          
        		</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.4</version>
					<executions>
						<execution>
							<goals>
								<goal>single</goal>
							</goals>
							<phase>package</phase>
							<configuration>
								<ignoreMissingDescriptor>true</ignoreMissingDescriptor>
								<descriptors>
									<descriptor>src/main/assembly/resources.xml</descriptor>
								</descriptors>
							</configuration>
						</execution>
					</executions>
				</plugin>				

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.6</version>
					<executions>
						<execution>
							<goals>
								<goal>unpack-dependencies</goal> 
							</goals>
							<phase>generate-resources</phase>
							<configuration>
								<outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory>
								<includeGroupIds>${groupId}.gwtfrontend</includeGroupIds>
								<includeArtifacIds>${artifactId}-gwtfrontend</includeArtifacIds>
							</configuration> 
						</execution>
					</executions>				
				</plugin>	
	
			    <plugin>
					<groupId>org.appverse.web.tools.jpaddlgenerator</groupId>
					<artifactId>appverse-web-tools-jpa-ddl-generator</artifactId>
					<version>${appverse.ddl-generator.version}</version> 
					<executions>
						<execution>
							<goals>
								<goal>generate-schema</goal>
							</goals>
                            <phase>compile</phase>
							<configuration>
							    <ddlOutputDir>src/main/resources/sql</ddlOutputDir>
							</configuration>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>org.appverse.web.framework.modules.backend.core.persistence.eclipselink</groupId>
							<artifactId>appverse-web-modules-backend-core-persistence-eclipselink</artifactId>
							<version>${appverse.framework.version}</version>
						</dependency>
					</dependencies>
				</plugin>
			</plugins>		
		</pluginManagement>
 	</build>
   
  	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.appverse.web.framework.poms</groupId>
				<artifactId>appverse-web-masterpom</artifactId>
				<version>${appverse.framework.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
  
  	<reporting>
    	<outputDirectory>${basedir}/target/site</outputDirectory>
    	<plugins>
      		<plugin>
        		<artifactId>maven-project-info-reports-plugin</artifactId>
        		<version>2.6</version>	
				<reportSets>
				   <reportSet>
				   		<reports>
				   			<report>index</report>				   		
		                	<report>summary</report>		
		                	<report>license</report>		
		               		<report>project-team</report>			               
		                	<report>mailing-list</report>	
		                	<report>scm</report>		                	
			                <report>issue-tracking</report>
			                <report>cim</report>			                
		                	<report>modules</report>	
		               		<report>plugins</report>			                			               				                		   			
		               		<report>plugin-management</report>		
				   			<report>help</report>	
				   			<report>dependencies</report>
				   			<report>dependency-convergence</report>				                
				   			<report>dependency-info</report>
			   				<report>dependency-management</report>					   			
				   			<report>distribution-management</report>		   			
				   		</reports>
				   </reportSet>
				</reportSets>
      		</plugin>
			<plugin>		
        		<artifactId>maven-surefire-report-plugin</artifactId>  
        		<version>2.14</version> 
        	</plugin>  
    		<plugin>		
        		<artifactId>maven-pmd-plugin</artifactId>  
        		<version>3.0</version> 	
        	</plugin>       	 		
		    <plugin>
		        <artifactId>maven-javadoc-plugin</artifactId>  	
		        <version>2.9</version>
		    </plugin>
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-checkstyle-plugin</artifactId>
	            <version>2.10</version>
	        </plugin>
    	</plugins>
  	</reporting>
  
	<profiles> 
		<profile> 
			<id>development</id> 
			<activation> 
				<activeByDefault>true</activeByDefault> 
			</activation> 
			<properties>
				<env>development</env>
				<maven.skip.tests>true</maven.skip.tests>
			</properties>			
			<build> 
				<pluginManagement> 
				  <plugins>
						<plugin> 
							<groupId>org.codehaus.mojo</groupId> 
							<artifactId>gwt-maven-plugin</artifactId> 				
							<configuration> 
								<extraJvmArgs>-Xms128m -Xmx768m -XX:MaxPermSize=256m</extraJvmArgs> 
								<draftCompile>true</draftCompile> 
							</configuration> 
						</plugin> 
					</plugins>
				</pluginManagement> 
			</build> 	
		</profile> 

		<profile>
			<id>integration</id>
			<properties>
				<env>integration</env>
				<maven.skip.tests>false</maven.skip.tests>
			</properties>
		</profile>
	</profiles>
</project>
